Aqui escribi el nombre de victor 4 veces

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
     <body>
-
+        <p>Victor Solis</p>
+        <p>Victor Solis</p>
+        <p>Victor Solis</p>
+        <p>Cardoza</p>
     </body>
 </body>
 
